--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.5",
@@ -20,6 +21,7 @@
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "avvvatars-react": "^0.4.2",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +32,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
