--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "18.3.18",
     "@types/react-dom": "^18",
