--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tabler/icons-react": "^3.31.0",
     "avvvatars-react": "^0.4.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.10.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
+    "motion": "^12.10.4",
     "next": "14.2.23",
     "prism-react-renderer": "^2.4.1",
     "react": "^18",
