--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-google-maps/api": "^2.20.6",
     "@tabler/icons-react": "^3.31.0",
     "avvvatars-react": "^0.4.2",
     "canvas-confetti": "^1.9.3",
